# 4_Gewinnt_KI

./: 4Gewinnt.c  4Gewinnt.h  CMakeLists.txt  Makefile  README.md  loop_logik.c  minimax.c  minimax_logik.c  rand_bot.c  selbst_spielen.c  spiellogik.c  suchen_bot.c
